--- a/app/app.properties
+++ b/app/app.properties
@@ -1,10 +1,10 @@
-# for signing
+# ????
 storeFile=key.keystore
 storePassword=1234567890
 keyAlias=app
 keyPassword=1234567890
 
-# for app config
+# app??
 packageName=com.your.package
 admobId=ca-app-pub-3940256099942544~3347511713
 facebookId=213123123123123
